# SnP_Dashboard

./: .envrc  .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
docs/: dev-architecture.md  prd.md  system-components.md  test_plan.md
src/: __init__.py  align_vintage.py  automation.py  backtesting.py  cli.py  data_sources.py  features.py  intraday_data.py  market_data.py  models_quantile.py  portfolio.py  scenarios.py  targets.py  validation.py  viz.py
tests/integration/: test_pipeline_synthetic.py
tests/unit/: test_align_vintage.py  test_backtesting.py  test_data_sources_fear_greed.py  test_features.py  test_models_quantile.py  test_portfolio_dashboard.py  test_targets.py
